--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "files.associations": {
         "iostream": "cpp"
+    },
+    "code-runner.executorMap": {
+        "cpp": "cxx $fullFileName -o a.out && ./a.out",
     }
 }
